<resources>
    <string name="app_name">AGAPI</string>
    <string name="slogan">Votre générosité, leur avenir.</string>
    <string name="devs">Developed by Random studio</string>
    <string name="Message_PageAccueil">Association recommandée</string>

    <!--partie test -->
    <string-array name="nom_association">
        <item> Asso1</item>
        <item> Asso2</item>
        <item> Asso3</item>
        <item> Asso4</item>
        <item> Asso5</item>
        <item> Asso6</item>
    </string-array>

    <string-array name="Description_association">
        <item> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt tempus nunc, varius imperdiet enim tempor at. Donec in egestas purus, mollis fringilla eros. Aliquam hendrerit, risus dignissim convallis dapibus, nunc erat fringilla odio, qui</item>
        <item> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt tempus nunc, varius imperdiet enim tempor at. Donec in egestas purus, mollis fringilla eros. Aliquam hendrerit, risus dignissim convallis dapibus, nunc erat fringilla odio, qui</item>
        <item> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt tempus nunc, varius imperdiet enim tempor at. Donec in egestas purus, mollis fringilla eros. Aliquam hendrerit, risus dignissim convallis dapibus, nunc erat fringilla odio, qui</item>
        <item> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt tempus nunc, varius imperdiet enim tempor at. Donec in egestas purus, mollis fringilla eros. Aliquam hendrerit, risus dignissim convallis dapibus, nunc erat fringilla odio, qui</item>
        <item> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt tempus nunc, varius imperdiet enim tempor at. Donec in egestas purus, mollis fringilla eros. Aliquam hendrerit, risus dignissim convallis dapibus, nunc erat fringilla odio, qui</item>
        <item> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt tempus nunc, varius imperdiet enim tempor at. Donec in egestas purus, mollis fringilla eros. Aliquam hendrerit, risus dignissim convallis dapibus, nunc erat fringilla odio, qui</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt tempus nunc, varius imperdiet enim tempor at. Donec in egestas purus, mollis fringilla eros. Aliquam hendrerit, risus dignissim convallis dapibus, nunc erat fringilla odio, quis ullamcorper augue metus a elit. Nulla felis magna, facilisis eu viverra tempus, lacinia sed sem. Nullam vel mi urna. Praesent laoreet tincidunt pretium. Ut nec augue eu nisl tristique viverra imperdiet et dolor. Cras felis enim, placerat non vehicula pretium, rutrum eu sapien.</string>
    <string name="se_connecter_avec_google">Se connecter avec google</string>
    <string name="logoagapi" translatable="false">Logo Agapi</string>
    <string name="mail_icon">mail Icon</string>
    <string name="email">Email</string>
    <string name="password_icon">password icon</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="mot_de_passe_oublie">Mot de passe oublié ?</string>
    <string name="ou">ou</string>
    <string name="google_icon">google icon</string>
    <string name="obligatoire">obligatoire</string>
    <string name="profil">profil</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="filtrer_associations">Filtrer associations</string>
    <string name="search_icon">Search Icon</string>
    <string name="rechercher">Rechercher</string>
    <string name="home_icon">Home Icon</string>
    <string name="association">Association</string>
    <string name="accueil">Accueil</string>
    <string name="association_icon">association icon</string>
    <string name="profil_icon">profil icon</string>
    <string name="retour">Retour</string>
    <string name="inscription">Inscription</string>
    <string name="pour_vous">Pour vous</string>
    <string name="suivi_e_s">Suivi(e)s</string>
    <string name="association_suivie">Association suivie</string>
    <string name="total_des_dons">Total des dons</string>
    <string name="_00_00">00.00€</string>
    <string name="don_par_association">Don par association</string>
    <string name="nom_asso_00_00">Nom asso : 00.00€</string>
    <string name="association_recommandee">Association recommandee</string>
    <string name="choisissez_le_montant">Choisissez le montant:</string>
    <string name="montant_libre">Montant Libre</string>
    <string name="total_du_don">Total du don</string>
    <string name="don_pour_nom_association">Don pour Nom association</string>
    <string name="je_valide_mon_don">Je valide mon don</string>
    <string name="bonjour">Bonjour</string>
    <string name="mon_profil">Mon profil</string>
    <string name="mon_association">Mon association</string>
    <string name="ic_ne_coeur">Icône coeur</string>
    <string name="faire_un_don">Faire un don</string>
    <string name="galerie">Galerie</string>
    <string name="nom_asso">Nom Asso</string>
    <string name="image">image</string>
    <!-- fin de la partie test -->
</resources>