<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragments.InscriptionFragment">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:backgroundTint="@color/transparent"
        android:contentDescription="@string/logoagapi"
        android:scaleType="fitXY"
        android:src="@mipmap/icon_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />


    <ImageView
        android:id="@+id/imageViewEmail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/mail_icon"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/imageVerrou"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4"
        app:srcCompat="@mipmap/icon_mail" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/obligatoire"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        app:srcCompat="@drawable/icon_asterisque" />


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/text_svg_main_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toEndOf="@+id/imageViewEmail"
        app:layout_constraintWidth_percent="0.6" />

    <ImageView
        android:id="@+id/imageViewProfil"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/profil"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayoutPartieGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.40"
        app:srcCompat="@drawable/profil_noir"
        />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/obligatoire"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageVerrou"
        app:srcCompat="@drawable/icon_asterisque" />

    <EditText
        android:id="@+id/editTextNom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/nom"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/text_svg_main_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageViewProfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageViewProfil"
        app:layout_constraintTop_toTopOf="@+id/imageViewProfil"
        app:layout_constraintWidth_percent="0.6" />

    <EditText
        android:id="@+id/editTextPrenom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/prenom"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/text_svg_main_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@id/imageViewProfil"
        app:layout_constraintTop_toBottomOf="@id/editTextNom"
        app:layout_constraintWidth_percent="0.6" />

    <ImageView
        android:id="@+id/imageVerrou"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/password_icon"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imageViewProfil"
        app:layout_constraintWidth_percent="0.4"
        app:srcCompat="@mipmap/icon_verrou" />

    <EditText
        android:id="@+id/editTextMdpInscription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/mot_de_passe"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/text_svg_main_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageVerrou"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageVerrou"
        app:layout_constraintWidth_percent="0.6" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/obligatoire"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewEmail"
        app:srcCompat="@drawable/icon_asterisque"  />

    <View
        android:id="@+id/viewButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_button"
        app:layout_constraintBottom_toBottomOf="@id/buttonInscription"
        app:layout_constraintEnd_toEndOf="@id/buttonInscription"
        app:layout_constraintStart_toStartOf="@id/buttonInscription"
        app:layout_constraintTop_toTopOf="@id/buttonInscription">

    </View>

    <Button
        android:id="@+id/buttonInscription"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:background="#00FFFFFF"
        android:text="@string/s_inscrire"
        android:textColor="@color/text_svg_main_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/ou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/ou"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonInscription" />

    <View
        android:id="@+id/barrie"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_margin="20dp"
        android:background="@color/text_svg_main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ou">

    </View>

    <LinearLayout
        android:id="@+id/linearLayoutPartieGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ou"
        tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/icon_google"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/se_connecter_avec_google"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/icon_google" />

        <TextView
            android:id="@+id/textconnectionGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/se_connecter_avec_google"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>