<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragments.LoginFragment">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:backgroundTint="@color/transparent"
        android:contentDescription="@string/logoagapi"
        android:scaleType="fitXY"
        android:src="@mipmap/icon_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageViewEmail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="300dp"
        android:contentDescription="@string/mail_icon"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageVerrou"
        app:layout_constraintTop_toTopOf="parent"


        app:layout_constraintWidth_percent="0.20"
        app:srcCompat="@mipmap/icon_mail" />


    <EditText
        android:id="@+id/login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="text|textEmailAddress|textAutoComplete"
        android:minHeight="48dp"
        android:textColorHint="@color/text_svg_main_color"


        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextMdpLogin"
        app:layout_constraintTop_toTopOf="@+id/imageViewEmail"
        app:layout_constraintWidth_percent="0.6"
        tools:ignore="VisualLintTextFieldSize" />

    <ImageView
        android:id="@+id/imageVerrou"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/password_icon"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@id/editTextMdpLogin"
        app:layout_constraintStart_toEndOf="@id/imageViewEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewEmail"
        app:layout_constraintWidth_percent="0.4"
        app:srcCompat="@mipmap/icon_verrou" />

    <EditText
        android:id="@+id/editTextMdpLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:hint="@string/mot_de_passe"
        android:importantForAutofill="no"
        android:inputType="text|textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/text_svg_main_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageVerrou"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageVerrou"
        app:layout_constraintWidth_percent="0.6"
        tools:ignore="VisualLintTextFieldSize" />


    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_button"
        app:layout_constraintBottom_toBottomOf="@id/buttonConnection"
        app:layout_constraintEnd_toEndOf="@id/buttonConnection"
        app:layout_constraintStart_toStartOf="@id/buttonConnection"
        app:layout_constraintTop_toTopOf="@id/buttonConnection">

    </View>

    <Button
        android:id="@+id/buttonConnection"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:background="#00FFFFFF"
        android:text="@string/connexion"
        android:textColor="@color/text_svg_main_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/mot_de_passe_oublie"
        android:textAlignment="textEnd"
        android:textColor="#0277BD"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextMdpLogin" />


    <TextView
        android:id="@+id/ou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/ou"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonConnection" />

    <View
        android:id="@+id/barrie"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_margin="20dp"
        android:background="@color/text_svg_main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ou">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ou"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/icon_google"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:contentDescription="@string/se_connecter_avec_google"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@mipmap/icon_google" />

        <TextView
            android:id="@+id/textconnectionGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/se_connecter_avec_google"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>