<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/couleur_gradient"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.Splash">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/icon_app" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins"
            android:text="@string/slogan"
            android:textAlignment="center"
            android:textColor="@color/text_svg_main_color"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/devs"
        android:textAlignment="center"
        android:textColor="@color/text_svg_main_color"
        android:textSize="12sp"
        />


</LinearLayout>