<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Page_association">

    <include
        layout="@layout/page_association_header"
        android:id="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/NomAssociation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom_asso"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />


    <TextView
        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="100dp"
        android:text="@string/test_description"
        app:layout_constraintTop_toBottomOf="@id/NomAssociation"
        android:textStyle="bold"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />


    <TextView
        android:id="@+id/Galerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/galerie"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/Description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imagesGalerie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxHeight="150dp"
        android:layout_marginTop="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Galerie"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDon"
        android:layout_width="match_parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_height="wrap_content"
        android:text="@string/faire_un_don"
        android:gravity="center"
        android:background="@drawable/background_button"
        android:textColor="@color/text_svg_main_color"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagesGalerie"
        />




    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/ic_ne_coeur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/page_associations_heart" />

    <include
        android:id="@+id/footer"
        layout="@layout/footerauthentification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
