<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragments.UserFragment">


    <TextView
        android:id="@+id/textViewAssociationSuivie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/association_suivie"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listeAssociationSuivie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAssociationSuivie"
        android:layout_marginStart="5dp"
         />

    <View
        android:id="@+id/barAssociationSuivie"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/listeAssociationSuivie"
        android:background="@color/text_svg_main_color"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/TitleDon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_des_dons"
        app:layout_constraintTop_toBottomOf="@+id/barAssociationSuivie"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/montantTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/_00_00"
        app:layout_constraintStart_toStartOf="@+id/TitleDon"
        app:layout_constraintTop_toBottomOf="@+id/TitleDon" />

    <TextView
        android:id="@+id/TitleDonParAssociation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_par_association"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="@+id/montantTotal"
        app:layout_constraintTop_toBottomOf="@+id/montantTotal" />

    <TextView
        android:id="@+id/DonParAssociationText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom_asso_00_00"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="@+id/TitleDonParAssociation"
        app:layout_constraintTop_toBottomOf="@+id/TitleDonParAssociation" />

    <TextView
        android:id="@+id/DonParAssociationText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom_asso_00_00"
        android:layout_marginTop="8dp"
        android:textSize="18sp"

        app:layout_constraintStart_toStartOf="@+id/DonParAssociationText1"
        app:layout_constraintTop_toBottomOf="@+id/DonParAssociationText1" />

    <TextView
        android:id="@+id/DonParAssociationText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom_asso_00_00"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/DonParAssociationText2"
        app:layout_constraintTop_toBottomOf="@+id/DonParAssociationText2" />

    <View
        android:id="@+id/barTotalDesDons"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/DonParAssociationText3"
        android:background="@color/text_svg_main_color"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:id="@+id/textViewAssociationRecommandee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/association_recommandee"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barTotalDesDons"
        android:layout_marginTop="5dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewAssociationRecommandee"
        android:layout_marginStart="5dp" />


</androidx.constraintlayout.widget.ConstraintLayout>